--- a/public/css/cms.css
+++ b/public/css/cms.css
@@ -334,6 +334,7 @@ img.right { float: right;margin: 3px 0px 10px 30px;}
 .entry table tbody td input{border: 1px solid #6ea1cf;background-color: #FFF; padding: 8px;}
 .entry table tbody td input:focus{border: 1px solid #6ea1cf;background-color: #F0F0F0;}
 .entry table tbody td textarea{ border: 1px solid #6EA1CF;font-family: Arial, Helvetica, sans-serif; font-size: 11px;}
+.entry table tbody td textarea:focus{ border: 1px solid #6ea1cf;background-color: #F0F0F0;}
 .post .entry #radio{ border: 1px solid 6ea1cf; background-color: #FFFFFF;}
 .entry table tfoot td{}
 .entry table tfoot td button{ border: 1px solid #6EA1CF; color: #74D1F6; font-size: 10px; display: block; text-align: center; width: 90px; font-family: Arial, Helvetica, sans-serif; margin: 15px 50px 5px 0px; padding: 5px; font-weight: bold;	background-color: #FFFFFF;}
