--- a/public/css/default.css
+++ b/public/css/default.css
@@ -197,6 +197,7 @@ body {
 	font-weight: bold;
 	z-index: 2000;
 	padding-left: 620px;
+	margin-top: -5px;
 }
 .bluedesigns {
 	font-family: Calibri;
@@ -804,6 +805,8 @@ body {
 	height: 20px;
 	width: 150px;
 	margin-bottom: 10px;
+	margin-right: 2px;
+	margin-left: 2px;
 }
 .main .wraper .nav #jsddm {
 	font-family: AkzidenzGrotesk, Arial;
@@ -1031,3 +1034,10 @@ body {
 .current {background:#789298; color:#FFF;}
 a.link:hover {background:#a1bdc4; color:#333;}
 
+.main {
+	width: 950px;
+	margin-top: 0;
+	margin-right: auto;
+	margin-bottom: 0;
+	margin-left: auto;
+}
